--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,5 @@
 {
-  "functions": {
-    "api/fuel-prices.js": {
-      "memory": 1024,
-      "maxDuration": 30
-    }
-  },
-  "rewrites": [
-    {
-      "source": "/api/fuel-prices",
-      "destination": "/api/fuel-prices"
-    }
-  ]
+  "buildCommand": "npm install",
+  "outputDirectory": "public",
+  "framework": null
 }
