--- a/.github/workflows/update-prices.yml
+++ b/.github/workflows/update-prices.yml
@@ -57,14 +57,22 @@ jobs:
           }
 
           function excelDateToJS(serial) {
-            if (serial instanceof Date) return serial;
-            if (typeof serial === 'string') return new Date(serial);
-            const utcDays = Math.floor(serial - 25569);
-            return new Date(utcDays * 86400 * 1000);
+            if (serial instanceof Date) {
+              // Ajusta para evitar problema de fuso horário
+              return new Date(serial.getTime() + serial.getTimezoneOffset() * 60000);
+            }
+            if (typeof serial === 'string') return new Date(serial + 'T12:00:00');
+            // Excel serial date - adiciona 12h para evitar problema de fuso
+            const utcDays = serial - 25569;
+            return new Date((utcDays * 86400 + 43200) * 1000);
           }
 
           function formatDate(date) {
-            return date.toISOString().split('T')[0];
+            // Formata usando UTC para evitar mudança de dia
+            const year = date.getUTCFullYear();
+            const month = String(date.getUTCMonth() + 1).padStart(2, '0');
+            const day = String(date.getUTCDate()).padStart(2, '0');
+            return `${year}-${month}-${day}`;
           }
 
           async function findLatestExcelUrl() {
